...
                FloatingActionButton(
                    shape = CircleShape,
                    backgroundColor = Color(0xFF283C73),
                    onClick = { navController.navigate("search") },
                    modifier = Modifier
                        .size(48.dp)
                        .testTag("Search icon")
                        .semantics { contentDescription = "Search icon" },
                ) {
                    Image(
                        painter = painterResource(id = R.drawable.ic_search),
                        contentDescription = "Searchicon",
                        modifier = Modifier.size(32.dp)
...
